--- a/index.html
+++ b/index.html
@@ -149,8 +149,11 @@ main section:hover {
             <h3>My Writings & Publications</h3>
             <ul>
                 <li><a href="https://www.thegazelle.org/issue/272/politicization-of-palestinian-keffiyeh" target="_blank">Politicization of the Palstinian Keffiyh</a></li>
-                <li><a href="file:///C:/Users/karen/Downloads/A%20collection%20of%20words%20by%20the%20children%20of%20the%20diaspora..pdf" target="_blank">A Collecttion of Words by the Children of the Diaspora</a></li>
-                <li><a href="file:///C:/Users/karen/Downloads/Teens%20Speak%20Out%202.pdf" target="_blank">One Step Forward, Two Steps Back</a></li>
+                <li>
+                    <a href="files/Words_by_the_Children_of_the_Diaspora.pdf" target="_blank">
+                        A Collection of Words by the Children of the Diaspora
+                    </a>
+                <li><a href="files/Teens_Speak_Out_2.pdf" target="_blank">One Step Forward, Two Steps Back</a>
                 <!-- Add more items as needed -->
             </ul>
         </section>
