--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ main section:hover {
                         A Collection of Words by the Children of the Diaspora
                     </a>
                 <li>
-                    <li><a href="files/Teens_Speak_Out_2.pdf" target="_blank">One Step Forward, Two Steps Back</a>
+                    <a href="files/Teens_Speak_Out_2.pdf" target="_blank">One Step Forward, Two Steps Back</a>
                 <!-- Add more items as needed -->
             </ul>
         </section>
@@ -193,4 +193,5 @@ main section:hover {
     </script>
 </body>
 </html>
+
 
